# zkemail-EmailAuth-verifier

./: .gitignore  README.md
proof_generator/: bun.lockb  package.json
proof_generator/emls/: sign_string.eml
proof_generator/src/: shortest-example.ts
test/: proofData.json  proof_args.txt  publicData.json  vkey.json
verifier/: Cargo.toml
verifier/src/: lib.rs  main.rs  verifier.rs  verifier_old.rs
