[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5.0"
ark-circom = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
anyhow = "1.0"
once_cell = "1.19"
num-bigint = "0.4.6"
alloy = "1.0.22"
